<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="btnSendText">Send SMS</string>
    <string name="btnImport">Import Last Dialed</string>
    <string name="hello">Hello World, saveNum!</string>
    <string name="app_name">Number Saver</string>
<string name="btnSetText">Save Text</string>
<string name="copied">Text Saved</string>
<string name="strDial">Dial</string>

<string name="btnClear">Clear Mem</string>


<string-array name="entries"><item>Disable</item>
<item>10 secs</item>
<item>30 secs</item>
<item>1 min</item>
<item>2 mins</item>
</string-array>

<string-array name="entryValues"><item>0</item>
<item>10</item>
<item>30</item>
<item>60</item>
<item>120</item>
</string-array>
<string name="btnAddContact">Add Contact</string>
</resources>
