<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout android:id="@+id/AbsoluteLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:minHeight="150dip" android:minWidth="210dip"><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_y="3dip" android:layout_x="5dip" android:text="Number to store"></TextView>
<EditText android:layout_height="wrap_content" android:layout_y="26dip" android:hint="Enter number" android:layout_x="5dip" android:inputType="phone" android:id="@+id/phnNum" android:layout_width="260dip"></EditText>
<Button android:layout_x="5dip" android:layout_y="80dip" android:id="@+id/btnAdd" android:layout_height="50dip" android:text="@string/btnClear" android:layout_width="90dip"></Button>
<Button android:layout_y="80dip" android:text="@string/strDial" android:layout_height="50dip" android:id="@+id/btnDial" android:layout_width="90dip" android:layout_x="95dip"></Button>
<TextView android:layout_height="wrap_content" android:id="@+id/TextView02" android:layout_width="wrap_content" android:text="Press MENU for options" android:textSize="12dip" android:layout_x="80dip" android:layout_y="185dip"></TextView>
<Button android:id="@+id/btnAddContact" android:text="@string/btnAddContact" android:layout_height="50dip" android:layout_y="80dip" android:layout_x="185dip" android:layout_width="85dip"></Button>

<Button android:layout_x="5dip" android:id="@+id/btnImportLast" android:layout_height="50dip" android:layout_y="135dip" android:text="@string/btnImport" android:layout_width="130dip"></Button>
<Button android:id="@+id/btnSendText" android:layout_height="50dip" android:layout_x="135dip" android:layout_y="135dip" android:layout_width="135dip" android:text="@string/btnSendText"></Button>




</AbsoluteLayout>
